---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Import SSL Certificate
#  HISTORY:
				   - Created:   2020-01-11 by Mike Duncan (mduncan@soliantconsulting.com)
				   - Modified:  

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/server/certificate/import" ]
Variable setzen [ $json ; JSONSetElement ( ""
				 ; [ "certificate"; FMS__fmserver::ssl_certificate ; JSONString ]
				 ; [ "privateKey"; FMS__fmserver::ssl_privateKey ; JSONString ]
				) ]
Wenn [ NICHT IstLeer ( FMS__fmserver::ssl_intermediateCertificates ) ]
	Variable setzen [ $json ; JSONSetElement ( $json
					 ; [ "intermediateCertificates"; FMS__fmserver::ssl_intermediateCertificates ; JSONString ]
					) ]
Ende (wenn)
Wenn [ NICHT IstLeer ( FMS__fmserver::ssl_expiredCertificate ) ]
	Variable setzen [ $json ; JSONSetElement ( $json
					 ; [ "expiredCertificate"; FMS__fmserver::ssl_expiredCertificate ; JSONBoolean ]
					) ]
Ende (wenn)
Wenn [ NICHT IstLeer ( FMS__fmserver::ssl_password ) ]
	Variable setzen [ $json ; JSONSetElement ( $json
					 ; [ "password"; FMS__fmserver::ssl_password ; JSONString ]
					) ]
Ende (wenn)
Variable setzen [ $curloptions ; " --request PATCH" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/json\"" &
				" --data @$json" &
				" --dump-header $$my.headers" ]
# set api update variable
Variable setzen [ $$API.UPDATE ; "1" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
